[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pg_grant"
version = "0.4.0"
description = "Parse PostgreSQL privileges"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
keywords = ["postgres", "acl", "grant", "revoke"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs>=21.3",
    "typing_extensions; python_version<'3.9'"
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2"]
test = ["plumbum", "pytest", "sqlalchemy[postgresql_psycopg]>=2"]
docs = ["pg_grant[sqlalchemy]", "sphinx>=6", "furo"]
docstest = ["pg_grant[docs]", "doc8"]
pep8test = ["flake8", "pep8-naming"]

[project.urls]
Documentation = "https://pg-grant.readthedocs.io"
"Source Code" = "https://github.com/RazerM/pg_grant"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-r s"

[tool.doc8]
ignore-path = "docs/_build/"

[tool.isort]
profile = "black"
known_first_party = ["pg_grant"]

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
